<resources><string name="app_name">Boss Mandados</string><string name="facebook_app_id">1784638261832605</string><string name="google_maps">AIzaSyBbYYC0GtGH_ueQx57jNyGECOtXEZhrdtk</string><string name="menuItem0">Menú</string><string name="menuItem1">Nuevo Mandado</string><string name="menuItem2">Mandados en Proceso</string><string name="menuItem3">Historial de Mandados</string><string name="menuItem4">Mis Direcciones</string><string name="menuItem5">Mi Cuenta</string><string name="menuItem6">Pago</string><string name="menuItem7">Promociones</string></resources>