<menu xmlns:android="http://schemas.android.com/apk/res/android"><!-- Add menu Icon --><item android:id="@+id/menu_titulo" android:title="@string/menuItem0" android:showAsAction="always" /><!-- Add menu Item 1 --><item android:id="@+id/nuevo_mandado" android:title="@string/menuItem1" /><!-- Add menu Item 2 --><item android:id="@+id/mandados_proceso" android:title="@string/menuItem2" /><!-- Add menu Item 3 --><item android:id="@+id/historial_mandados" android:title="@string/menuItem3" /><!-- Add menu Item 4 --><item android:id="@+id/mis_direcciones" android:title="@string/menuItem4" /><!-- Add menu Item 5 --><item android:id="@+id/mi_cuenta" android:title="@string/menuItem5" /><!-- Add menu Item 6 --><item android:id="@+id/pago" android:title="@string/menuItem6" /><!-- Add menu Item 7 --><item android:id="@+id/promociones" android:title="@string/menuItem7" /></menu>